Minor style tweaks - fixes small gap on right side on mobile

--- a/admin/src/app/app.component.styl
+++ b/admin/src/app/app.component.styl
@@ -10,7 +10,6 @@
   flex-grow: 0
   user-select: none
   border-radius: 0
-  margin-bottom: 20px
 
   h1
     display: inline
