--- a/admin/src/app/comments/comments.component.styl
+++ b/admin/src/app/comments/comments.component.styl
@@ -1,7 +1,6 @@
 .comments-component
   table
     width: 100%
-    margin-top: 20px
 
     .mat-header-cell
       padding: 0 5px
