--- a/admin/src/app/compose-article/compose-article.component.styl
+++ b/admin/src/app/compose-article/compose-article.component.styl
@@ -1,7 +1,9 @@
 .compose-article-component
-  background-color: white
   display: flex
   flex-direction: column
+
+  mat-card
+    padding: 20px 10px
 
   .form-input
     display: block
