--- a/admin/src/app/compose-page/compose-page.component.styl
+++ b/admin/src/app/compose-page/compose-page.component.styl
@@ -1,11 +1,9 @@
 .compose-page-component
-  width: 90%
-  max-width: 1000px
-  margin: 10px auto 0 auto
-  padding: 10px
-  background-color: white
   display: flex
   flex-direction: column
+
+  mat-card
+    padding: 20px 10px
 
   .form-input
     display: block
