--- a/admin/src/app/users/users.component.styl
+++ b/admin/src/app/users/users.component.styl
@@ -1,7 +1,6 @@
 .users-component
   table
     width: 100%
-    margin-top: 20px
 
     .mat-header-cell
       padding: 0 5px
