--- a/admin/src/styles/styles.styl
+++ b/admin/src/styles/styles.styl
@@ -19,7 +19,8 @@ html
   .page
     width: 90%
     margin: 0 auto 0 auto
-    padding: 20px
+    padding: 20px 0
+    max-width: 800px
 
   .snackbar
     color: white
