--- a/front/src/styles/styles.styl
+++ b/front/src/styles/styles.styl
@@ -3,6 +3,8 @@
 
 html
   height: 100%
+  margin: 0
+  padding: 0
 
   body
     position: absolute
@@ -19,7 +21,7 @@ html
   .page
     width: 90%
     margin: 0 auto 0 auto
-    padding: 20px
+    padding: 20px 0
     max-width: 800px
 
     img {
